<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VendasUp</string>
    <string name="title_activity_product_list">Produtos</string>
    <string name="title_activity_product_details">Detalhes do Produto</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_customer_list">Clientes</string>
    <string name="title_activity_customer_details">Detalhes do Cliente</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_order">Pedido</string>
    <string name="title_activity_order_products">Itens do Pedido</string>
    <string name="title_activity_order_payments">Parcelamento</string>
    <string name="title_activity_synchronization">Sincronização</string>
    <string name="title_activity_historic">Histórico</string>
    <string name="title_activity_welcome">Bem-Vindo</string>
    <string name="title_activity_expired">Versão Expirou</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_carga_inicial">CargaInicialActivity</string>
    <string name="title_activity_installment">Parcelamento</string>
    <string name="title_activity_confirmacao">Confirmação</string>
    <string name="title_activity_chart">Relatórios</string>
    <string name="title_activity_chart_vendas_por_periodo">Relatórios</string>
    <string name="title_activity_user_profile">Perfil</string>

    <string name="tv_description">Descrição:</string>

    <string name="exception_message_generic">Opss. Ocorreu um erro.</string>
    <string name="exception_message_syncronization">Ocorreu um erro ao receber os dados.</string>

    <string name="btn_text_retry">Voltar</string>

    <string name="string_content_description">View não acessivel</string>
    <string name="btn_excluir">Excluir</string>
    <string name="btn_cancelar">Cancelar</string>

    <string name="tv_product_id">Código</string>
    <string name="tv_product_description">Descrição</string>
    <string name="tv_product_reference">Referência</string>
    <string name="tv_product_package">Embalagem</string>
    <string name="tv_product_stock">Estoque</string>
    <string name="tv_product_price">Preço</string>
    <string name="tv_product_barcode">Código de Barras</string>
    <string name="tv_product_price_whit_sifrao">Preço R$</string>
    <string name="tv_product_stock_whit_colon">Estoque:</string>
    <string name="tv_product_price_whit_colon">Preço:</string>

    <string name="tv_user_name">Nome</string>

    <string name="tv_customer_name">Nome</string>
    <string name="tv_customer_real_name">Razão Social</string>
    <string name="tv_customer_nickname">Apelido</string>
    <string name="tv_customer_person_type">Tipo</string>
    <string name="tv_customer_cpf">CPF</string>
    <string name="tv_customer_cnpj">CNPJ</string>
    <string name="tv_customer_inscricao">Inscrição Estadual</string>
    <string name="tv_customer_rg">RG</string>
    <string name="tv_customer_birthday">Aniversário</string>
    <string name="tv_customer_observation">Observação</string>
    <string name="tv_customer_phone_home_title">Telefone Residêncial</string>
    <string name="tv_customer_phone_commercial_title">Telefone Comercial</string>
    <string name="tv_customer_phone_cell_title">Telefone Celular</string>
    <string name="tv_customer_email_title">Email</string>

    <string name="tv_customer_title">Cliente</string>
    <string name="tv_customer_whit_colon">Cliente:</string>
    <string name="tv_cart_title">Carrinho</string>
    <string name="tv_form_payment_title">Pagamento</string>

    <string name="tv_customer_price_table_title">Tabela de Preço Padrão</string>
    <string name="tv_customer_payment_title">Forma de Pagamento Padrão</string>
    <string name="tv_customer_installment_title">Forma de Parcelamento</string>
    <string name="tv_customer_credit_limit_title">Limite de Crédito</string>

    <string name="tv_address_postalcode_title">CEP</string>
    <string name="tv_address_city_title">Cidade</string>
    <string name="tv_address_district_title">Bairro</string>
    <string name="tv_address_street_title">Rua</string>
    <string name="tv_address_number_title">Numero</string>

    <string name="tv_order_product_amount">Quantidade:</string>


    <string name="tv_customer_phone_whit_colon">Fone:</string>

    <string name="search_title">Pesquisar</string>
    <string name="add_title">Adicionar</string>
    <string name="edit_title">Editar</string>
    <string name="save_title">Salvar</string>
    <string name="add_export">Exportar</string>
    <string name="menu_exportar_email">Enviar Email</string>

    <string name="tv_default_product_description">Descrição não cadastrado</string>
    <string name="tv_default_product_reference">Referência não cadastrado</string>
    <string name="tv_default_product_code">Código não cadastrado</string>
    <string name="tv_default_product_package">Embalagem não cadastrada</string>
    <string name="tv_default_product_stock">0,00</string>
    <string name="tv_default_product_price">0,00</string>
    <string name="tv_default_product_barcode">Sem código de barras</string>
    <string name="tv_default_customer_name">Nome não cadastrado</string>
    <string name="tv_default_customer_nickname">Apelido não cadastrado</string>
    <string name="tv_default_customer_phone">Telefone não cadastrado</string>
    <string name="tv_default_customer_email">Email não cadastrado</string>
    <string name="tv_default_customer_person_type">Tipo não cadastrado</string>
    <string name="tv_default_customer_cpfcnpj">CPF/CNPJ não cadastrado</string>
    <string name="tv_default_customer_inscricao">RG/Inscrição não cadastrado</string>
    <string name="tv_default_customer_birthday">Aniversário não cadastrado</string>
    <string name="tv_default_customer_observation">Observação não cadastrada</string>
    <string name="tv_default_customer_price_table">Nenhuma tabela de preço</string>
    <string name="tv_default_customer_payment">Nenhuma forma de pagamento</string>
    <string name="tv_default_customer_installment">Nenhuma forma de parcelamento</string>
    <string name="tv_default_customer_credit_limit">Nenhum limite de crédito</string>

    <string name="tv_default_user_name">Nome do usuário</string>

    <string name="tv_default_address_postalcode">CEP não cadastrado</string>
    <string name="tv_default_address_city">Cidade não cadastrado</string>
    <string name="tv_default_address_district">Bairro não cadastrado</string>
    <string name="tv_default_address_street">Rua não cadastrado</string>
    <string name="tv_default_address_number">Numero não cadastrado</string>
    <string name="tv_order_number_with_colon">Pedido:</string>

    <string name="tv_installment_conditions">Condições:</string>

    <string name="sp_title_customer_type">Tipo de pessoa</string>
    <string name="sp_title_price_table">Tabela de Preço</string>
    <string name="tv_title_price_table_whit_colon">Tabela de Preço:</string>
    <string name="sp_title_installment">Forma de Parcelamento</string>
    <string name="sp_title_payment">Forma de Pagamento</string>
    <string name="sp_price_table_empty">Selecione uma tabela de preço</string>
    <string name="btn_entrar">Entrar</string>
    <string name="tv_order_customer">Selecione algum cliente</string>
    <string name="tv_order_product_stock">Estoque:</string>
    <string name="tv_price">Preço:</string>
    <string name="tv_order_discount">Desconto %:</string>
    <string name="tv_order_increase">Acréscimo %:</string>
    <string name="tv_order_discount_money">Desconto R$:</string>
    <string name="tv_order_increase_money">Acréscimo R$:</string>
    <string name="tv_organization_whit_colon">Empresa:</string>
    <string name="tv_organization">Empresa</string>

    <string name="tv_sincronizar">Sincronizar</string>
    <string name="btn_sincronizacao">Enviar e Receber Dados</string>


    <string name="msg_order_error_customer">Selecione um cliente</string>
    <string name="msg_order_error_product">Selecione algum produto</string>
    <string name="msg_order_error_payment">Selecione uma forma de pagamento</string>



    <string name="tv_user">Usuário</string>
    <string name="tv_email">Email</string>
    <string name="tv_name">Nome</string>
    <string name="tv_password">Senha</string>
    <string name="tv_password_re">Repita a Senha</string>
    <string name="tv_money">R$:</string>
    <string name="tv_date_with_colun">Data:</string>
    <string name="tv_emissao_with_colun">Emissão:</string>
    <string name="btn_signin">Continuar</string>
    <string name="btn_singup">Cadastrar</string>

    <string name="notificacao_sem_conexao">Parece que você não esta conectado na internet.</string>
    <string name="tv_confirmacao_codigo">Enviamos um código de verificação para o e-mail %s . Por favor, insira o código a baixo:</string>


    <string name="message_expired_version_demo">Seu tempo de avaliação do sistema já encerrou. Adquira agora mesmo a versão completa, ou solicite um tempo adicional para a avaliação do sistema.</string>
    <string name="message_expired_version_registered">Desculpe. A licensa de uso expirou. Renove sua licensa para continuar utilizando o sistema.</string>
    <string name="title_expired_version_demo">Obrigado por utilizar nosso sistema.</string>
    <string name="title_expired_version_registered">Obrigado por utilizar nosso sistema.</string>

    <string-array name="customer_type_array">
        <item>Física</item>
        <item>Jurídica</item>
    </string-array>

    <string-array name="form_payment">
        <item>Dinheiro</item>
        <item>Cheque</item>
        <item>Boleto</item>
        <item>Cartão</item>
        <item>Duplicata</item>
        <item>Promissória</item>
    </string-array>

    <string-array name="charts_type">
        <item>Valor de Vendas por Mês</item>
    </string-array>

    
</resources>
