<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/add_title"
        app:showAsAction="always"/>


    <item
        android:id="@+id/it_done"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/save_title"
        android:visible="false"
        app:showAsAction="always"/>

</menu>