<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_padding_left"
    android:paddingRight="@dimen/activity_padding_right">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/lv_row_padding_top"
        android:paddingBottom="@dimen/lv_row_padding_botton">

        <ImageView
            android:id="@+id/imageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_customer_name_title"
            android:text="@string/tv_customer_name"
            style="@style/AppTheme.TextViewPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageName"
            android:layout_toEndOf="@+id/imageName"
            android:layout_marginLeft="@dimen/tv_title_marginleft_of_image"
            android:layout_marginStart="@dimen/tv_title_marginleft_of_image" />

        <TextView
            android:id="@+id/tv_customer_name"
            style="@style/AppTheme.TextViewSecundary"
            android:text="@string/tv_default_customer_name"
            android:layout_below="@+id/tv_customer_name_title"
            android:layout_alignLeft="@+id/tv_customer_name_title"
            android:layout_alignStart="@+id/tv_customer_name_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/lv_row_padding_top"
        android:paddingBottom="@dimen/lv_row_padding_botton">

        <ImageView
            android:id="@+id/imageNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_emoticon_happy"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_customer_nickname_title"
            android:text="@string/tv_customer_nickname"
            style="@style/AppTheme.TextViewPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageNickname"
            android:layout_toEndOf="@+id/imageNickname"
            android:layout_marginLeft="@dimen/tv_title_marginleft_of_image"
            android:layout_marginStart="@dimen/tv_title_marginleft_of_image" />

        <TextView
            android:id="@+id/tv_customer_nickname"
            style="@style/AppTheme.TextViewSecundary"
            android:text="@string/tv_default_customer_nickname"
            android:layout_below="@+id/tv_customer_nickname_title"
            android:layout_alignLeft="@+id/tv_customer_nickname_title"
            android:layout_alignStart="@+id/tv_customer_nickname_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/lv_row_padding_top"
        android:paddingBottom="@dimen/lv_row_padding_botton">

        <ImageView
            android:id="@+id/imagePersonType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrange_send_backward"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_customer_persontype_title"
            android:text="@string/tv_customer_person_type"
            style="@style/AppTheme.TextViewPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imagePersonType"
            android:layout_toEndOf="@+id/imagePersonType"
            android:layout_marginLeft="@dimen/tv_title_marginleft_of_image"
            android:layout_marginStart="@dimen/tv_title_marginleft_of_image" />

        <TextView
            android:id="@+id/tv_customer_persontype_"
            style="@style/AppTheme.TextViewSecundary"
            android:text="@string/tv_default_customer_person_type"
            android:layout_below="@+id/tv_customer_persontype_title"
            android:layout_alignLeft="@+id/tv_customer_persontype_title"
            android:layout_alignStart="@+id/tv_customer_persontype_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/lv_row_padding_top"
        android:paddingBottom="@dimen/lv_row_padding_botton">

        <ImageView
            android:id="@+id/imageCpfCnpj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_credit_card"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_customer_cpfcnpj_title"
            android:text="@string/tv_customer_cpf"
            style="@style/AppTheme.TextViewPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageCpfCnpj"
            android:layout_toEndOf="@+id/imageCpfCnpj"
            android:layout_marginLeft="@dimen/tv_title_marginleft_of_image"
            android:layout_marginStart="@dimen/tv_title_marginleft_of_image" />

        <TextView
            android:id="@+id/tv_customer_cpfcnpj"
            style="@style/AppTheme.TextViewSecundary"
            android:text="@string/tv_default_customer_cpfcnpj"
            android:layout_below="@+id/tv_customer_cpfcnpj_title"
            android:layout_alignLeft="@+id/tv_customer_cpfcnpj_title"
            android:layout_alignStart="@+id/tv_customer_cpfcnpj_title" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/lv_row_padding_top"
        android:paddingBottom="@dimen/lv_row_padding_botton">

        <ImageView
            android:id="@+id/iv_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clipboard_account"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_customer_inscricao_title"
            android:text="@string/tv_customer_rg"
            style="@style/AppTheme.TextViewPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/iv_rg"
            android:layout_toEndOf="@+id/iv_rg"
            android:layout_marginLeft="@dimen/tv_title_marginleft_of_image"
            android:layout_marginStart="@dimen/tv_title_marginleft_of_image" />

        <TextView
            android:id="@+id/tv_customer_inscricao"
            style="@style/AppTheme.TextViewSecundary"
            android:text="@string/tv_default_customer_inscricao"
            android:layout_below="@+id/tv_customer_inscricao_title"
            android:layout_alignLeft="@+id/tv_customer_inscricao_title"
            android:layout_alignStart="@+id/tv_customer_inscricao_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/lv_row_padding_top"
        android:paddingBottom="@dimen/lv_row_padding_botton">

        <ImageView
            android:id="@+id/iv_customer_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cake"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_customer_birthday_title"
            android:text="@string/tv_customer_birthday"
            style="@style/AppTheme.TextViewPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/iv_customer_birthday"
            android:layout_toEndOf="@+id/iv_customer_birthday"
            android:layout_marginLeft="@dimen/tv_title_marginleft_of_image"
            android:layout_marginStart="@dimen/tv_title_marginleft_of_image" />

        <TextView
            android:id="@+id/tv_customer_birthday"
            style="@style/AppTheme.TextViewSecundary"
            android:text="@string/tv_default_customer_birthday"
            android:layout_below="@+id/tv_customer_birthday_title"
            android:layout_alignLeft="@+id/tv_customer_birthday_title"
            android:layout_alignStart="@+id/tv_customer_birthday_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/lv_row_padding_top"
        android:paddingBottom="@dimen/lv_row_padding_botton">

        <ImageView
            android:id="@+id/iv_customer_observation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_comment_text_outline"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_customer_observation_title"
            android:text="@string/tv_customer_observation"
            style="@style/AppTheme.TextViewPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/iv_customer_observation"
            android:layout_toEndOf="@+id/iv_customer_observation"
            android:layout_marginLeft="@dimen/tv_title_marginleft_of_image"
            android:layout_marginStart="@dimen/tv_title_marginleft_of_image" />

        <TextView
            android:id="@+id/tv_customer_observation"
            style="@style/AppTheme.TextViewSecundary"
            android:text="@string/tv_default_customer_observation"
            android:layout_below="@+id/tv_customer_observation_title"
            android:layout_alignLeft="@+id/tv_customer_observation_title"
            android:layout_alignStart="@+id/tv_customer_observation_title" />

    </RelativeLayout>
</LinearLayout>