<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UseCompoundDrawables"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/lv_row_padding_top"
    android:paddingBottom="@dimen/lv_row_padding_botton"
    android:paddingLeft="@dimen/activity_padding_left"
    android:paddingRight="@dimen/activity_padding_right"
    android:background="@drawable/selector_listview">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_customer_name"
            android:layout_toRightOf="@+id/iv_order_status"
            android:layout_marginLeft="@dimen/space_imageview_to_textview"
            style="@style/AppTheme.TextViewInListViewPrimary" />


        <TextView
            android:id="@+id/tv_customer_phone_title"
            android:layout_width="wrap_content"
            android:text="@string/tv_customer_phone_whit_colon"
            android:layout_below="@+id/tv_customer_name"
            android:layout_alignLeft="@+id/tv_customer_name"
            android:layout_alignStart="@+id/tv_customer_name"
            style="@style/AppTheme.TextViewInListViewSecundory"/>

        <TextView
            android:id="@+id/tv_customer_phone"
            android:text="@string/tv_default_customer_phone"
            android:layout_alignTop="@+id/tv_customer_phone_title"
            android:layout_toRightOf="@+id/tv_customer_phone_title"
            android:layout_toEndOf="@+id/tv_customer_phone_title"
            style="@style/AppTheme.TextViewInListViewSecundory"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_order_status"
            android:layout_width="@dimen/lv_iv_width"
            android:layout_height="@dimen/lv_iv_height"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher" />

    </RelativeLayout>

</LinearLayout>
